fixed timeline on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -80,13 +80,36 @@ body {
 
 .timeline-left,
 .timeline-right {
-
+    width: 50%;
     padding-bottom: 2rem;
+
+    &>.d-flex {
+        padding-right: 3rem;
+        padding-left: 3rem;
+    }
 
     .timeline-content {
         position: relative;
         border-color: var(--bs-secondary) !important;
         border-width: 4px !important;
+    }
+}
+
+.timeline-condensed {
+    .timeline-left {
+        width: 5px;
+    }
+
+    .timeline-right {
+        width: 100%;
+
+        &>.d-flex {
+            padding-right: 0;
+
+            img {
+                width: 100% !important;
+            }
+        }
     }
 }
 
@@ -114,13 +137,14 @@ body {
         width: 0;
         right: 100%;
         border-style: solid;
-        border-width:  0 0 20px 40px;
-        border-color: transparent transparent var(--bs-secondary) transparent ;
+        border-width: 0 0 20px 40px;
+        border-color: transparent transparent var(--bs-secondary) transparent;
     }
 }
 
 .card {
     transition: transform .2s;
+
     &:hover {
         transform: scale(1.1);
     }
